webgl fix + typo in gallery

--- a/src/omnitone-demo-gallery.html
+++ b/src/omnitone-demo-gallery.html
@@ -173,9 +173,9 @@
     </div>
 
     <div class="section disclaimer">
-      <p>The contents in the demo gallery are allowed to be displayed only for
-        demonstration purposes of the Omnitone project.<br>The other usage must
-        obtain the permission from the author.</p>
+      <p>These videos are not a part of Omnitone project and are used with the
+      permission from the respective authors. <br>For any other usage, 
+      permission must be obtained from the author.</p>
     </div>
 
   </template>
