--- a/src/omnitone-home.html
+++ b/src/omnitone-home.html
@@ -271,7 +271,7 @@
         <li>
           <h2>Web VR</h2>
           <p><a href="https://webvr.info/" target="_blank">Web VR</a> is an
-            experimental Javascript API that provides access to Virtual Reality
+            experimental JavaScript API that provides access to Virtual Reality
             devices, such as the GoogleCardboard, in your browser.</p>
         </li>
       </ul>
