--- a/test/index.html
+++ b/test/index.html
@@ -29,6 +29,7 @@
   <script src="test-setup.js"></script>
   <script>mocha.setup('bdd')</script>
   <script src="test-router.js"></script>
+  <script src="test-rotator.js"></script>
   <script>mocha.run();</script>
 </body>
 </html>
