--- a/test/index.html
+++ b/test/index.html
@@ -30,6 +30,7 @@
   <script>mocha.setup('bdd')</script>
   <script src="test-router.js"></script>
   <script src="test-rotator.js"></script>
+  <script src="test-phasematchedfilter.js"></script>
   <script>mocha.run();</script>
 </body>
 </html>
