--- a/examples/demo.html
+++ b/examples/demo.html
@@ -17,7 +17,7 @@
 <head>
   <meta charset="utf-8">
   <title>A Simple Demo: Omnitone</title>
-  <script src="../build/omnitone.min.js"></script>
+  <script src="../build/omnitone.js"></script>
   <style>
     h2 {
       font-family: sans-serif; 
@@ -38,12 +38,14 @@
 <body>
   <h2>Select the sound source to play.</h2>
   <h2>Use headphones for the full-sphere surround sound.</h2>
+  <p id="rotation">please</p>
   <br>
   <select id="eSelectSource" name="dropdown" disabled>
     <option value="speech" selected="selected">Speech</option>
     <option value="warbird">Airplanes</option>
   </select>
   <button id="eButtonPlayback" disabled>Play</button>
+
 
   <script>
     var audioSources = {
@@ -52,6 +54,7 @@
     };
 
     var buttonPlayback, selectSource;
+    var yaw, pitch, roll;
 
     window.addEventListener('load', function () {
 
@@ -90,13 +93,63 @@
           audioElement.play();
       };
 
+        var rotator;
       // Initialize the decoder and activate the button when ready.
       decoder.initialize().then(function () {
         buttonPlayback.disabled = false;
         selectSource.disabled = false;
+          rotator = Omnitone.createFOARotator(audioContext);
+        window.requestAnimationFrame(runAnimation);
       }, function (onInitializationError) {
         console.error(onInitializationError);
       });
+
+
+        var textRotation = document.getElementById('rotation');
+
+        function runAnimation()
+        {
+            var gamepads = navigator.getGamepads ? navigator.getGamepads() : (navigator.webkitGetGamepads ? navigator.webkitGetGamepads() : []);
+            var changed = false;
+            for (var i = 0; i < gamepads.length; ++i)
+            {
+                var pad = gamepads[i];
+                if(pad != null) {
+                    if(roll != pad.axes[2] || pitch != pad.axes[1] || yaw != pad.axes[0]) {
+                        changed = true;
+                        roll = pad.axes[2];
+                        pitch = pad.axes[1];
+                        yaw = pad.axes[0];
+                        textRotation.innerHTML="yaw "+Math.round(yaw*180)+" pitch "+Math.round(pitch*180)+" roll "+Math.round(roll*180);
+                    }
+                    break;
+                }
+            }
+
+            window.requestAnimationFrame(runAnimation);
+            if(changed) {
+
+// from http://mathworld.wolfram.com/EulerAngles.html
+                var phi = yaw * Math.PI; // 1. the first rotation is by an angle phi about the z-axis using D,
+                var theta = 0 * Math.PI; // the second rotation is by an angle theta in [0,pi] about the former x-axis (now x^') using C, and
+                var psi = 0 * Math.PI;   //3. the third rotation is by an angle psi about the former z-axis (now z^') using B.
+
+                rotator.setRotationMatrix([
+                    Math.cos(psi)*Math.cos(phi)-Math.cos(theta)*Math.sin(phi)*Math.sin(psi),
+                    Math.cos(psi)*Math.sin(phi)+Math.cos(theta)*Math.cos(phi)*Math.sin(psi),
+                    Math.sin(psi)*Math.sin(theta),
+                    -Math.sin(psi)*Math.cos(phi)-Math.cos(theta)*Math.sin(phi)*Math.cos(psi),
+                    -Math.sin(psi)*Math.sin(phi)+Math.cos(theta)*Math.cos(phi)*Math.cos(psi),
+                    Math.cos(psi)*Math.sin(theta),
+                    Math.sin(theta)*Math.sin(phi),
+                    -Math.sin(theta)*Math.cos(phi),
+                    Math.cos(theta)
+                ]);
+                decoder.setRotationMatrix(rotator.getRotationMatrix());
+            }
+        }
+
+
     });
 
 
