--- a/examples/demo.html
+++ b/examples/demo.html
@@ -116,9 +116,9 @@
                 if(pad != null) {
                     if(roll != pad.axes[2] || pitch != pad.axes[1] || yaw != pad.axes[0]) {
                         changed = true;
-                        roll = pad.axes[2];
-                        pitch = pad.axes[1];
                         yaw = pad.axes[0];
+                        pitch = pad.axes[1];
+                        roll = pad.axes[2];
                         textRotation.innerHTML="yaw "+Math.round(yaw*180)+" pitch "+Math.round(pitch*180)+" roll "+Math.round(roll*180);
                     }
                     break;
@@ -129,9 +129,11 @@
             if(changed) {
 
 // from http://mathworld.wolfram.com/EulerAngles.html
+
+                // down is back
                 var phi = yaw * Math.PI; // 1. the first rotation is by an angle phi about the z-axis using D,
-                var theta = 0 * Math.PI; // the second rotation is by an angle theta in [0,pi] about the former x-axis (now x^') using C, and
-                var psi = 0 * Math.PI;   //3. the third rotation is by an angle psi about the former z-axis (now z^') using B.
+                var theta = pitch * Math.PI; // the second rotation is by an angle theta in [0,pi] about the former x-axis (now x^') using C, and
+                var psi = roll * Math.PI;   //3. the third rotation is by an angle psi about the former z-axis (now z^') using B.
 
                 rotator.setRotationMatrix([
                     Math.cos(psi)*Math.cos(phi)-Math.cos(theta)*Math.sin(phi)*Math.sin(psi),
