--- a/examples/foa-decoder.html
+++ b/examples/foa-decoder.html
@@ -16,36 +16,34 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>A Simple Demo: Omnitone</title>
+  <title>Example: FOADecoder (Legacy)</title>
+  <script src="audiocontext-shim.js"></script>
   <script src="../build/omnitone.min.js"></script>
-  <style>
-    h2 {
-      font-family: sans-serif; 
-    }
-
-    button {
-      width: 120px;
-      height: 24px;
-      font-weight: bold;
-    }
-
-    select {
-      width: 120px;
-      font-size: 24px;
-    }
-  </style>
+  <link rel="stylesheet" href="example.css">
 </head>
 <body>
-  <h2>Select the sound source to play.</h2>
-  <h2>Use headphones for the full-sphere surround sound.</h2>
-  <br>
-  <select id="eSelectSource" name="dropdown" disabled>
-    <option value="speech" selected="selected">Speech</option>
-    <option value="warbird">Airplanes</option>
-  </select>
-  <button id="eButtonPlayback" disabled>Play</button>
+  <h1>Example: FOADecoder (Legacy)</h1>
+  <p><code>FOADecoder</code> is a fully-configurable spatial audio renderer.
+    (ambisonic decoding and binaural rendering) Consider using
+    <code>FOARenderer</code> for the optimum performance, but
+    <code>FOADecoder</code> is still recommended for the use case that requires
+    a customized signal chain for audio spatialization since you can change and
+    rearrange all the building blocks inside.</p>
+  <p>See <a href="https://github.com/GoogleChrome/omnitone#foadecoder">more info
+    </a> on <code>FOADecoder</code>.</p>
+
+  <div id="secSource">
+    <p>NOTE: Use headphones for the full-sphere surround sound.</p>
+    <h2>Select the sound source to play.</h2>
+    <select id="eSelectSource" name="dropdownSource" disabled>
+      <option value="speech" selected="selected">Speech</option>
+      <option value="warbird">Airplanes</option>
+    </select>
+    <button id="eButtonPlayback" disabled>Play</button>
+  </div>
 
   <script>
+    var decoder;
     var audioSources = {
       'speech': 'resources/4ch_B_FuMaNorm_FuMaOrd_speech.wav',
       'warbird': 'resources/jlwarbirds3.amb'
@@ -53,23 +51,19 @@
 
     var buttonPlayback, selectSource;
 
-    window.addEventListener('load', function () {
-
-      // Set up the context and the audio element.
+    var onLoad = function () {
       var audioContext = new AudioContext();
       var audioElement = document.createElement('audio');
       audioElement.loop = true;
       audioElement.crossOrigin = 'anonymous';
       audioElement.src = audioSources['speech'];
 
-      // Create a decoder.
-      var decoder = Omnitone.createFOADecoder(audioContext, audioElement, {
+      decoder = Omnitone.createFOADecoder(audioContext, audioElement, {
         // The example audio is in the FuMa ordering (W,X,Y,Z). So remap the
         // channels to the ACN format.
         channelMap: [0, 3, 1, 2]
       });
 
-      // Handles UI.
       buttonPlayback = document.getElementById('eButtonPlayback');
       selectSource = document.getElementById('eSelectSource');
 
@@ -90,16 +84,15 @@
           audioElement.play();
       };
 
-      // Initialize the decoder and activate the button when ready.
       decoder.initialize().then(function () {
         buttonPlayback.disabled = false;
         selectSource.disabled = false;
       }, function (onInitializationError) {
         console.error(onInitializationError);
       });
-    });
+    };
 
-
+    window.addEventListener('load', onLoad);
   </script>
 </body>
 </html>
