--- a/examples/index.html
+++ b/examples/index.html
@@ -3,9 +3,9 @@
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
-  
+
       http://www.apache.org/licenses/LICENSE-2.0
-  
+
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -16,22 +16,16 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Omnitone Unit Tests</title>
-  <link rel="stylesheet" href="../node_modules/mocha/mocha.css"/>
+  <title>Omnitone: Exmaples</title>
+  <script src="../build/omnitone.min.js"></script>
+  <link rel="stylesheet" href="example.css">
 </head>
 <body>
-  <div id="mocha"></div>
-  <div id="messages"></div>
-  <div id="fixtures"></div>
-  <script src="../node_modules/chai/chai.js"></script>
-  <script src="../node_modules/mocha/mocha.js"></script>
-  <script src="../build/omnitone.min.js"></script>
-  <script src="test-setup.js"></script>
-  <script>mocha.setup('bdd')</script>
-  <script src="test-router.js"></script>
-  <script src="test-rotator.js"></script>
-  <script src="test-phasematchedfilter.js"></script>
-  <script src="test-convolver.js"></script>
-  <script>mocha.run();</script>
+  <h1>Omnitone Examples</h1>
+  <ul>
+    <li><a href="foa-decoder.html">FOADecoder (Legacy)</a></li>
+    <li><a href="foa-renderer.html">FOARenderer (Optimized)</a></li>
+    <li><a href="gamepad.html">Omnitone with Gamepad API</a></li>
+  </ul>
 </body>
 </html>
