--- a/examples/gamepad.html
+++ b/examples/gamepad.html
@@ -16,96 +16,172 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>A Simple Demo: Omnitone with Headtracking realized via a
-    Gamepad</title>
+  <title>Gamepad: Omnitone with head tracking via Gamepad</title>
   <script src="../build/omnitone.min.js"></script>
   <style>
     h2 {
       font-family: sans-serif;
     }
-
     button {
       width: 120px;
-      height: 24px;
-      font-weight: bold;
+      height: 34px;
+      font-size: 24px;
     }
-
     select {
       width: 120px;
       font-size: 24px;
     }
+    #eDivDirection {
+      padding: 10px;
+      font-family: monospace;
+      white-space: pre;
+    }
   </style>
 </head>
 <body>
-  <h1>Omnitone with Headtracking realized via a Gamepad</h1>
-  <h2>Select the sound source to play.</h2>
-  <h2>Use headphones for the full-sphere surround sound.</h2>
-  <div id="eRotator">
-    <p>
-      Please connect a gamepad (or a
-      <a href="https://www.google.de/search?q=headtracker+gamepad">headtracker
-        emulating a gamepad</a>) to enable a 3D audio playback that
-      considers your head rotations.<br/> Without a gamepad, you can still select
-      from predefined looking directions:
-    </p>
-    <select name="eSelectRotation" size="1"
-            onchange="selectRotation(this.value)">
-      <option value="0" selected>forward</option>
-      <option value="1">backward</option>
-      <option value="2">left</option>
-      <option value="3">right</option>
-      <option value="4">up</option>
-      <option value="5">down</option>
-      <option value="6">head on your right shoulder</option>
-      <option value="7">head on your left shoulder</option>
+  <h1>Gamepad: Omnitone with head tracking via Gamepad</h1>
+  <p>Connect a game pad to control the rotation of sound field. More info on
+    GamepadAPI can be found at
+    <a href="https://developer.mozilla.org/en-US/docs/Web/API/Gamepad_API/Using_the_Gamepad_API" target="_blank">
+    MDN</a> or <a href="https://www.html5rocks.com/en/tutorials/doodles/gamepad/">
+    HTML5Rocks</a>.</p>
+
+  <div id="secSource">
+    <p>Use headphones for the full-sphere surround sound.</p>
+    <button id="eButtonPlayback" disabled>Play</button>
+    <h2>Select the sound source to play.</h2>
+    <select id="eSelectSource" name="dropdownSource" disabled>
+      <option value="speech" selected="selected">Speech</option>
+      <option value="warbird">Airplanes</option>
     </select>
   </div>
-  <p id="eRotation"></p>
-  <br>
-  <select id="eSelectSource" name="dropdown" disabled>
-    <option value="speech" selected="selected">Speech</option>
-    <option value="warbird">Airplanes</option>
-  </select>
-  <button id="eButtonPlayback" disabled>Play</button>
+
+  <div id="secRotation">
+    <h2>Use game pad or select a direction to rotate.</h2>
+    <p>Select a direction to simulate the rotation.</p>
+    <select id="eSelectDirection" name="dropdownDirection" disabled
+            style="width: 260px;">
+      <option value="front" selected>Front</option>
+      <option value="rear">Rear</option>
+      <option value="left">Left</option>
+      <option value="right">Right</option>
+      <option value="up">Up</option>
+      <option value="down">Down</option>
+      <option value="rightShoulder">Head on right shoulder</option>
+      <option value="leftShoulder">Head on left shoulder</option>
+    </select>
+    <div id="eDivDirection"></div>
+  </div>
 
   <script>
+    var decoder;
     var audioSources = {
       'speech': 'resources/4ch_B_FuMaNorm_FuMaOrd_speech.wav',
       'warbird': 'resources/jlwarbirds3.amb'
     };
 
-    var buttonPlayback, selectSource;
-    var yaw, pitch, roll;
-    var predefinedDirections = [
-      [ 0, 0, 0 ],          // forward
-      [ Math.PI, 0, 0 ],    // backward
-      [ -Math.PI/2, 0, 0 ], // left
-      [ Math.PI/2, 0, 0 ],  // right
-      [ 0, Math.PI/2, 0 ],  // up
-      [ 0, -Math.PI/2, 0 ], // down
-      [ 0, 0, Math.PI/2 ],  // head on right shoulder
-      [ 0, 0, -Math.PI/2 ]  // head on left shoulder
-    ];
+    // TODO(hongchan): Safari supports the API only above 10.1.
+    if (!navigator.getGamepads) {
+      navigator.getGamepads = function () { return []; };
+    }
 
-    window.addEventListener('load', function () {
+    var gamePadFound = false;
+    var previousAxes = new Float32Array(3);
+    var predefinedDirections = {
+      front: [0, 0, 0],
+      rear: [Math.PI, 0, 0],
+      left: [-Math.PI/2, 0, 0],
+      right: [Math.PI/2, 0, 0],
+      up: [0, Math.PI/2, 0],
+      down: [0, -Math.PI/2, 0],
+      rightShoulder: [0, 0, Math.PI/2],
+      leftShoulder: [0, 0, -Math.PI/2]
+    };
 
-      // Set up the context and the audio element.
+    // DOM element handles.
+    var buttonPlayback, selectSource, selectDirection, divDirection;
+
+
+    /**
+     * Sets the decoder's rotation matrix and calculates the angles. Note that 
+     * Omnitone decoder uses a different convention (theta = yaw, 
+     * psi = pitch, phi = roll).
+     * See: http://mathworld.wolfram.com/EulerAngles.html
+     * 
+     * @param  {Number} theta Pitch.
+     * @param  {Number} psi Roll.
+     * @param  {Number} phi Yaw.
+     */
+    var updateDirection = function (theta, psi, phi) {
+      var cosTheta = Math.cos(theta);
+      var cosPhi = Math.cos(phi);
+      var sinPhi = Math.sin(phi);
+      var sinTheta = Math.sin(theta);
+      var sinPsi = Math.sin(psi);
+      var cosPsi = Math.cos(psi);
+
+      decoder.setRotationMatrix([
+        cosTheta * cosPhi, cosTheta * sinPhi, -sinTheta,
+        sinPsi * sinTheta * cosPhi - cosPsi * sinPhi,
+        sinPsi * sinTheta * sinPhi + cosPsi * cosPhi,
+        cosTheta * sinPsi,
+        cosPsi * sinTheta * cosPhi + sinPsi * sinPhi,
+        cosPsi * sinTheta * sinPhi - sinPsi * cosPhi,
+        cosTheta * cosPsi
+      ]);
+      
+      divDirection.innerHTML =
+          'YAW = ' + Math.round(theta * 180 / Math.PI).toFixed(2) +
+          '\nPITCH = ' + Math.round(psi * 180 / Math.PI).toFixed(2) +
+          '\nROLL = ' + Math.round(phi * 180 / Math.PI).toFixed(2);
+    };
+
+
+    /**
+     * Poll Gamepads and retrieve the movement to update the direction. Driven
+     * by requestAnmiationFrame().
+     */
+    var pollGamePad = function () {
+      var gamepads = navigator.getGamepads();
+      for (var i = 0; i < gamepads.length; ++i) {
+        var pad = gamepads[i];
+        if (pad) {
+          if (previousAxes[0] !== pad.axes[0] ||
+              previousAxes[1] !== pad.axes[1] ||
+              previousAxes[2] !== pad.axes[2]) {
+            previousAxes[0] = pad.axes[0];
+            previousAxes[1] = pad.axes[1];
+            previousAxes[2] = pad.axes[2];
+            updateDirection(axes[0] * Math.PI,
+                            axes[1] * Math.PI,
+                            axes[2] * Math.PI);
+          }
+        }
+      }
+      requestAnimationFrame(pollGamePad);
+    };
+
+
+    /**
+     * handles |onload| event.
+     */
+    var onLoad = function () {
       var audioContext = new AudioContext();
       var audioElement = document.createElement('audio');
       audioElement.loop = true;
       audioElement.crossOrigin = 'anonymous';
       audioElement.src = audioSources['speech'];
 
-      // Create a decoder.
-      var decoder = Omnitone.createFOADecoder(audioContext, audioElement, {
+      decoder = Omnitone.createFOADecoder(audioContext, audioElement, {
         // The example audio is in the FuMa ordering (W,X,Y,Z). So remap the
         // channels to the ACN format.
         channelMap: [0, 3, 1, 2]
       });
 
-      // Handles UI.
       buttonPlayback = document.getElementById('eButtonPlayback');
       selectSource = document.getElementById('eSelectSource');
+      selectDirection = document.getElementById('eSelectDirection');
+      divDirection = document.getElementById('eDivDirection');
 
       buttonPlayback.onclick = function (event) {
         if (event.target.textContent === 'Play') {
@@ -124,98 +200,23 @@
           audioElement.play();
       };
 
-      // Initialize the decoder and activate the button when ready.
-      decoder.initialize().then(function () {
-        buttonPlayback.disabled = false;
-        selectSource.disabled = false;
-        window.requestAnimationFrame(runAnimation);
-      }, function (onInitializationError) {
-        console.error(onInitializationError);
-      });
-
-      var textRotation = document.getElementById('eRotation');
-      var divRotator = document.getElementById('eRotator');
-
-      // called if HTML selector is changed
-      var selectRotation = function (value) {
-        var direction = predefinedDirections[value];
+      selectDirection.onchange = function (event) {
+        var direction = predefinedDirections[event.target.value];
         updateDirection(direction[0], direction[1], direction[2]);
       };
 
-      // sets the decoder's rotation matrix and displays the angles
-      // Tait–Bryan angles represent rotations about three distinct axes
-      // z-y’-x″ (intrinsic rotations) are known as: yaw, pitch and roll
-      function updateDirection(yaw, pitch, roll) {
+      decoder.initialize().then(function () {
+        buttonPlayback.disabled = false;
+        selectSource.disabled = false;
+        selectDirection.disabled = false;
+        requestAnimationFrame(pollGamePad);
+      }, function (onInitializationError) {
+        console.error(onInitializationError);
+      });
+    };
 
-        // http://mathworld.wolfram.com/EulerAngles.html
-        // theta is pitch, psi is roll, and  phi is yaw.
-        // but do not ask me why this decoder uses a different convention:
-        var theta = yaw;
-        var psi = pitch;
-        var phi = roll;
 
-        decoder.setRotationMatrix([
-          Math.cos(theta) * Math.cos(phi),
-          Math.cos(theta) * Math.sin(phi),
-          -Math.sin(theta),
-          Math.sin(psi) * Math.sin(theta) * Math.cos(phi)
-            - Math.cos(psi) * Math.sin(phi),
-          Math.sin(psi) * Math.sin(theta) * Math.sin(phi)
-            + Math.cos(psi) * Math.cos(phi),
-          Math.cos(theta) * Math.sin(psi),
-          Math.cos(psi) * Math.sin(theta) * Math.cos(phi)
-            + Math.sin(psi) * Math.sin(phi),
-          Math.cos(psi) * Math.sin(theta) * Math.sin(phi)
-            - Math.sin(psi) * Math.cos(phi),
-          Math.cos(theta) * Math.cos(psi)
-        ]);
-
-        textRotation.innerHTML = 'yaw ' + Math.round(yaw * 180 / Math.PI)
-          + ' pitch ' + Math.round(pitch * 180 / Math.PI)
-          + ' roll ' + Math.round(roll * 180 / Math.PI);
-      }
-
-      selectRotation(0);
-
-      var gamepadFound = false;
-      var axes = [ 0,0,0 ];
-
-      // check checks for gamepads or query the existing gamepad for changes
-      function runAnimation() {
-
-        // look for a Gamepad and check, whether is has changed it axes values.
-        var gamepads = navigator.getGamepads ? navigator.getGamepads() :
-          (navigator.webkitGetGamepads ? navigator.webkitGetGamepads()
-            : []);
-        for (var i = 0; i < gamepads.length; ++i) {
-          var pad = gamepads[i];
-          if (pad != null) {
-            if (!gamepadFound) {
-              gamepadFound=true;
-              divRotator.style.display = 'none';
-            }
-            if (axes[0] != pad.axes[0] || axes[1] != pad.axes[1]
-                || axes[2]  != pad.axes[2]) {
-              axes[0] = pad.axes[0];
-              axes[1] = pad.axes[1];
-              axes[2] = pad.axes[2];
-              updateDirection(axes[0] * Math.PI,
-                             axes[1] * Math.PI,
-                             axes[2] * Math.PI);
-            }
-            window.requestAnimationFrame(runAnimation);
-            return;
-          }
-        }
-        if (gamepadFound) {
-          divRotator.style.display = 'block';
-          selectRotation(0);
-          gamepadFound = false;
-        }
-        setTimeout(runAnimation, 500);
-      }
-    });
-
+    window.addEventListener('load', onLoad);
   </script>
 </body>
 </html>
