added shield badges

--- a/src/omnitone-home.html
+++ b/src/omnitone-home.html
@@ -226,6 +226,11 @@
         <strong>first-order ambisonic</strong> decoder that allows you to
         <strong>binaurally render</strong> an ambisonic recording directly on
         the browser.</p>
+      <p>
+        <a href="https://travis-ci.org/GoogleChrome/omnitone"><img src="https://img.shields.io/travis/GoogleChrome/omnitone.svg"></a> 
+        <a href="https://www.npmjs.com/package/omnitone"><img src="https://img.shields.io/npm/v/omnitone.svg?colorB=4bc51d"></a>
+        <a href="https://raw.githubusercontent.com/GoogleChrome/omnitone/master/LICENSE"><img src="https://img.shields.io/badge/license-Apache%202-brightgreen.svg"></a>
+      </p>
     </div>
 
     <div class="section jumbo">
