Support for Higher-Order Ambisonics (HOA). Rotation, convolution and rendering classes, w/ example.

--- a/examples/index.html
+++ b/examples/index.html
@@ -25,6 +25,7 @@
   <ul>
     <li><a href="foa-decoder.html">FOADecoder (Legacy)</a></li>
     <li><a href="foa-renderer.html">FOARenderer (Optimized)</a></li>
+    <li><a href="hoa-renderer.html">HOARenderer (HQ + Optimized)</a></li>
     <li><a href="gamepad.html">Omnitone with Gamepad API</a></li>
   </ul>
 </body>
