Revert changes to hoa-rotator.js Unit tests to verify hoa-rotator.js

--- a/examples/hoa-renderer.html
+++ b/examples/hoa-renderer.html
@@ -93,13 +93,14 @@
       var phi = elevationValue / 180 * Math.PI;
 
       var forward = [
-        -Math.sin(theta) * Math.cos(phi),
+        Math.sin(theta) * Math.cos(phi),
         Math.sin(phi),
-        -Math.cos(theta) * Math.cos(phi)
+        Math.cos(theta) * Math.cos(phi)
       ];
       var upInitial = [0, 1, 0];
-      var right = normalize(crossProduct(forward, upInitial));
-      var up = normalize(crossProduct(right, forward));
+      var right = normalize(crossProduct(upInitial, forward));
+      var up = normalize(crossProduct(forward, right));
+      console.log(right, up, forward);
 
       var matrix = new Float32Array(9);
       matrix[0] = right[0];
@@ -108,9 +109,9 @@
       matrix[3] = up[0];
       matrix[4] = up[1];
       matrix[5] = up[2];
-      matrix[6] = -forward[0];
-      matrix[7] = -forward[1];
-      matrix[8] = -forward[2];
+      matrix[6] = forward[0];
+      matrix[7] = forward[1];
+      matrix[8] = forward[2];
       hoaRenderer.setRotationMatrix(matrix);
     }
 
